{{$NEXT}}

1.302138  2018-07-11 09:29:51-07:00 America/Los_Angeles

    - No changes since trial

1.302137  2018-05-25 08:45:13-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make it safe to fork before events in IPC

1.302136  2018-04-19 05:40:11-07:00 America/Los_Angeles

    - Add test2_add_callback_testing_done to Test2::API

1.302135  2018-03-29 22:53:00-07:00 America/Los_Angeles

    - No changes since last trial

1.302134  2018-03-19 21:20:08-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure all hubs, events, and contexts get a unique (per run) id.
    - Use a common generator for unique(enough) id's (not UUIDs)

1.302133  2018-03-11 12:48:37-07:00 America/Los_Angeles

    - No changes since last trial

1.302132  2018-03-09 15:43:51-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add method to validate facet data
    - Add Test2::Event::V2 event class, and context helpers
    - Improve how events handle facets
    - Break out meta_facet_data
    - Document and fix Facets2Legacy
    - Fix nested and in_subtest to look at hub facets
    - Fix event->related and trace with uuid

1.302131  2018-03-07 09:36:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure event puts the uuid into the about facet

1.302130  2018-03-07 08:07:54-08:00 America/Los_Angeles

    - No changes since last trial

1.302129  2018-03-06 13:43:22-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Make hubs tag events with a new facet

1.302128  2018-03-05 09:26:53-08:00 America/Los_Angeles

    - No changes since the trial

1.302127  2018-03-02 12:43:56-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix missing UUID in Test::Builder subtests

1.302126  2018-03-01 23:15:52-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add optional UUID tagging

1.302125  2018-02-21 23:10:39-08:00 America/Los_Angeles

    - No changes since trial

1.302124  2018-02-13 22:02:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix a test to skip without threads
