@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Mask warning from the recent IPC fix generated when threaded Test tools are loaded at run-time
+
 1.302138  2018-07-11 09:29:51-07:00 America/Los_Angeles
 
     - No changes since trial
